Edit/ Create Gamer Profile- added User Status

--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/create_gamer_profile.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/create_gamer_profile.html
@@ -69,6 +69,12 @@ Create Gamer Profile
                             <input name="time_available" class="time_available">
                         </div>
                         <div class="profile-item">
+                            <div class="label">Are you looking for Teams/ Talent ?</div>
+                            <select class="user_status" name="user_status">
+
+                            </select>
+                        </div>
+                        <div class="profile-item">
                             <div class="label">In game communication skill</div>
                             <input type="range" min="0" max="5" class="comm_rating input" name="comm_rating">
                         </div>
@@ -105,10 +111,7 @@ Login first!
 
 <script>
     $(document).ready(function () {
-        $('#close_popup').click(function () {
-            console.log("Close popup")
-            TogglePopup();
-        });
+
     })
 
     $(".post_form").hide();
@@ -129,6 +132,8 @@ Login first!
             type: 'GET',
             url: `/getgamerank_server/${pref_game}`,
             success: function (response) {
+
+                HidePopup();
 
                 if (response['is_profile_exists'] == true) {
                     $('.profile_exists_popup').empty();
@@ -152,6 +157,16 @@ Login first!
                 $('.ranks').empty();
                 for (let i = 0; i < response['ranks'].length; i++) {
                     $('.ranks').append(`<option>${response['ranks'][i][0]}</option>`)
+                }
+
+                $('.user_status').empty();
+                console.log(response['default_user_status'])
+                for (let i = 0; i < response['default_user_status'].length; i++) {
+
+                    if (response['default_user_status'][i][0] == "none")
+                        $('.user_status').append(`<option selected="selected">${response['default_user_status'][i][0]}</option>`)
+                    else
+                        $('.user_status').append(`<option>${response['default_user_status'][i][0]}</option>`)
                 }
 
                 $('.additional-fields').empty();
@@ -180,10 +195,10 @@ Login first!
 
 
     function HidePopup() {
-        $('.profile_exists_popup').hide();
+        $('.profile_exists_popup').css('display', 'none');
     }
     function ShowPopup() {
-        $('.profile_exists_popup').show();
+        $('.profile_exists_popup').css('display', 'flex');
     }
 
     let is_main = false;
