--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/navigation/sidebar_page_links.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/navigation/sidebar_page_links.html
@@ -14,6 +14,7 @@
         </a>
     </button>
     {% endif %}
+
     {% if page == 'create-gamer-profile' or page == 'home-timeline' %}
     {%if gamer_profiles %}
     <button class="page-link" onclick="location.href=`{% url 'edit-gamer-profile' user.username %}`">
@@ -22,7 +23,27 @@
             Edit Gamer Profile
         </a>
     </button>
-
     {%endif%}
     {% endif %}
+
+    <!-- User Profile Page -->
+    {%if page == 'user_profile_page' %}
+    {%if user_to_view == user.username%}
+    <button class="page-link" onclick="location.href=`{% url 'create-gamer-profile' user.username %}`">
+        <a href="{% url 'create-gamer-profile' user.username %}">
+
+            Create New Gamer Profile
+        </a>
+    </button>
+    {%if gamer_profiles %}
+    <button class="page-link" onclick="location.href=`{% url 'edit-gamer-profile' user.username %}`">
+        <a href="{% url 'edit-gamer-profile' user.username %}">
+
+            Edit Gamer Profile
+        </a>
+    </button>
+    {%endif%}
+    {%endif%}
+    {%endif%}
+    <!-- User Profile Page -->
 </div>
