Started with the css of Stats Display page

--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/base/base.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/base/base.html
@@ -20,6 +20,7 @@
 
         <link rel="stylesheet" href="{% static 'PostIT/css/style.css'%}">
         <link rel="stylesheet" href="{% static 'PostIT/css/sidebar_style.css'%}">
+        <link rel="stylesheet" href="{% static 'PostIT/css/stats_resume_style.css'%}">
         <link rel="stylesheet" href="{% static 'PostIT/css/add_post_style.css'%}">
         <link rel="stylesheet" href="{% static 'PostIT/css/utilities/button_style.css'%}">
         <link rel="stylesheet" href="{% static 'PostIT/css/utilities/popups_style.css'%}">
