bar working for Valorant stats

--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/create_gamer_profile.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/create_gamer_profile.html
@@ -38,6 +38,12 @@ Create Gamer Profile
                             <select class="ranks" name="rank" form="gamerprofile_form"></select>
                         </div>
                         <div class="profile-item">
+                            <div class="label"> Achievements</div>
+                            <textarea class="achievements" name="achievements"
+                                placeholder="eg. I have been a Radiant player for 2 years, I have played in Tier 2 LAN tournaments"
+                                form="gamerprofile_form"></textarea>
+                        </div>
+                        <div class="profile-item">
 
                             <div class="additional-fields">
 
