--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/game_specific_stats/valorant_stats.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/game_specific_stats/valorant_stats.html
@@ -5,7 +5,7 @@
 
         <div class="game_stat">
             <div class="label"><i class="fa-solid fa-user"></i>{{g.game}} User ID :</div>
-            <div class="value">{{g.in_game_user_id}}</div>
+            <div class="value small_text">{{g.in_game_user_id}}</div>
         </div>
 
         <div class="game_stat">
@@ -16,6 +16,10 @@
         <div class="game_stat">
             <div class="label"><i class="fa-solid fa-location-dot"></i> Server :</div>
             <div class="value"> {{g.server}}</div>
+        </div>
+        <div class="game_stat ">
+            <div class="label"><i class="fa-solid fa-clock"></i> Availability :</div>
+            <div class="value flexible"> {{g.time_available}}</div>
         </div>
 
     </div>
@@ -29,27 +33,79 @@
             {%endif%}
 
         </div>
-
+        <div class="game_stat">
+            <div class="label"><i class="fa-solid fa-business-time"></i>Years of Experience :</div>
+            <div class="value">{{g.years_of_exp}}</div>
+        </div>
         <div class="game_stat">
             <div class="label"><i class="fa-solid fa-mars-stroke-up"></i> Status : </div>
             <div class="value">{{g.user_status}}</div>
         </div>
     </div>
 </div>
-{%endfor%}
-<div class="mid_section">
 
-    {%for item in additional_info%}
-    {% if item.game == 'Valorant' %}
-    <div class="game_stat">
-        Preferred Agents:
-        {{item.info.0}}
+<div class="section_divider"></div>
+<div class="divided_section mid_section">
+    <div class="section_info ">
+        {%for item in additional_info%}
+        {% if item.game == 'Valorant' %}
+        <div class="game_stat">
+            <div class="label">
+                Preferred Agents:
+            </div>
+            <div class="value">
+                {{item.info.0}}
+            </div>
+        </div>
+        <div class="game_stat">
+            <div class="label">
+                Peak Rank:
+            </div>
+            <div class="value">
+                {{item.info.1}}
+            </div>
+        </div>
+        {%endif%}
+        {%endfor%}
     </div>
-    <div class="game_stat">
-        Peak Rank
-        {{item.info.1}}
-    </div>
-    {%endif%}
+</div>
+<div class="full_width_section">
+    <div class="section_info bottom_section">
+        <div class="game_stat flexible">
+            <div class="label"><i class="fa-solid fa-business-time"></i>Achievements :</div>
+            <div class="value">{{g.achievements}}</div>
+        </div>
+        <div class="bar_stats">
+            <div class="label"><i class="fa-brands fa-magento"></i>Roles :</div>
 
+            {%for label, value in saved_roles_rating%}
+            <div class="stat_container">
+                <div class="bar_label">{{label}}</div>
+                <div class="bar_holder" id='{{label}}{{"_bar"}}'>
+                    <div class="bar_display"></div>
+                    <div class="bar_value" style="display: none;">{{value}}</div>
+                </div>
+            </div>
+            {%endfor%}
+        </div>
+    </div>
 </div>
 {%endfor%}
+
+<script>
+    $(document).ready(function () {
+        $.ajax({
+            type: 'GET',
+            url: `/get_saved_gamerank_server/Valorant`,
+            success: function (response) {
+                for (let i = 0; i < response['default_roles'].length; i++) {
+                    let multiplier_value = $(`#${response['default_roles'][i]}_bar`)
+                        .find('.bar_value').text();
+                    console.log(multiplier_value)
+                    $(`#${response['default_roles'][i]}_bar`)
+                        .find('.bar_display').css('width', `${(multiplier_value / 5) * 100}%`)
+                }
+            }
+        })
+    })
+</script>
