--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/stats_resume_style.css
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/stats_resume_style.css
@@ -43,6 +43,17 @@
 
 }
 
+.vertical {
+    display: flex !important;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: flex-start;
+}
+
+.vertical .value {
+    width: 100%;
+    text-align: left;
+}
 
 
 .gamer_profile_all_stats_section .game_stat div {
@@ -59,9 +70,10 @@
     border-radius: 5px;
     font-weight: bold;
     position: relative;
-    background-color: var(--primary_color);
+    background-color: var(--text-secondary-color);
     justify-self: start;
     width: 100%;
+    color: black;
 }
 
 .gamer_profile_all_stats_section .game_stat .value {
@@ -101,6 +113,27 @@
 
 .bar_label {
     margin-left: 35px;
+}
+
+.bar_stats {
+    margin: 20px 0;
+}
+
+.bar_stats .label {
+    display: flex;
+    text-align: left;
+    margin: 10px 0;
+    margin-left: 20px;
+    width: 95%;
+    background-color: var(--text-secondary-color);
+    height: 35px;
+    align-items: center;
+    border-radius: 5px;
+    color: black;
+}
+
+.section_info .label i {
+    color: black;
 }
 
 .bar_stats .bar_holder {
