--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/stats_resume_style.css
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/stats_resume_style.css
@@ -83,7 +83,7 @@
 .section_divider {
     width: 90%;
     height: 2px;
-    background-color: var(--primary_color);
+    background-color: var(--text-secondary-color);
     margin: 20px auto;
 }
 
