--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/postElement/post_element_home_timeline.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/postElement/post_element_home_timeline.html
@@ -15,6 +15,15 @@
         <a class="reply-button" href="{% url 'upload_reply' post.pk %}" onclick="storeScroll()">
             {{post.reply_count}}<i class="fa-solid fa-comment"></i></a>
 
+        {% if post.is_lft_lfp_post %}
+        <button id="vouch-button" class="vouch-button" name="{{ post.vouch_count }}"
+            value="{{ post.id }}">{{post.vouch_count}}Vouch
+        </button>
+        <div>
+            View Likes
+        </div>
+        {% endif %}
+
         {% endif %}
 
 
