--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/postElement/post_element_replies.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/postElement/post_element_replies.html
@@ -35,6 +35,22 @@
         {%endif %}
         {% endif %}
 
+        {% if post.is_lft_lfp_post %}
+        <button id="vouch-button" class="vouch-button" name="{{ post.vouch_count }}"
+            value="{{ post.id }}">{{post.vouch_count}}Vouch
+        </button>
+
+        {% endif %}
+        <div>
+            <div style="cursor: pointer;">
+                <a href="{% url 'liked-by' post.id %}"> View Likes</a>
+            </div>
+            {% if post.is_lft_lfp_post %}
+            <div>
+                View Vouches
+            </div>
+            {% endif %}
+        </div>
 
     </div>
 </div>
