--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/game_specific_stats/valorant_stats.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/game_specific_stats/valorant_stats.html
@@ -1,30 +1,47 @@
 {%for g in selected_gamer_profiles%}
 <div class="divided_section">
-    <div class="section_info left_section">
+    <div class=" left_top_section">
         <div class="game_display_name" style="display: none;">{{g.game}}</div>
 
-        <div class="game_stat">
+        {%for logo, url in game_logos.items%}
+        {%if g.game == logo %}
+        <img class="game_logo" src={{url}} alt="">
+        {%endif%}
+        {%endfor%}
+
+
+    </div>
+    <div class="section_info right_section">
+        <div class="game_stat top_game_stat">
             <div class="label"><i class="fa-solid fa-user"></i>{{g.game}} User ID :</div>
             <div class="value small_text">{{g.in_game_user_id}}</div>
         </div>
 
-        <div class="game_stat">
+        <div class="game_stat top_game_stat">
             <div class="label"><i class="fa-solid fa-ranking-star"></i>Rank :</div>
             <div class="value">{{g.rank}}</div>
         </div>
 
-        <div class="game_stat">
-            <div class="label"><i class="fa-solid fa-location-dot"></i> Server :</div>
+        <div class="game_stat top_game_stat">
+            <div class="label"><i class="fa-solid fa-server"></i> Server :</div>
             <div class="value"> {{g.server}}</div>
         </div>
-        <div class="game_stat ">
+        <div class="game_stat top_game_stat">
+            <div class="label"><i class="fa-solid fa-location-dot"></i> Region :</div>
+            <div class="value"> </div>
+        </div>
+        <div class="game_stat top_game_stat">
             <div class="label"><i class="fa-solid fa-clock"></i> Availability :</div>
             <div class="value flexible"> {{g.time_available}}</div>
         </div>
 
     </div>
-    <div class="section_info right_section">
-        <div class="game_stat">
+</div>
+
+<div class="section_divider"></div>
+<div class="divided_section mid_section">
+    <div class="section_info mid_left_info">
+        <!-- <div class="game_stat top_game_stat">
             <div class="label"><i class="fa-solid fa-server"></i>Allow Matchmaking :</div>
             {%if g.looking_for_friends %}
             <div class="value"><i class="fa-solid fa-toggle-on"></i></div>
@@ -32,41 +49,8 @@
             <div class="value"><i class="fa-solid fa-toggle-off"></i></div>
             {%endif%}
 
-        </div>
-        <div class="game_stat">
-            <div class="label"><i class="fa-solid fa-business-time"></i>Years of Experience :</div>
-            <div class="value">{{g.years_of_exp}}</div>
-        </div>
-        <div class="game_stat">
-            <div class="label"><i class="fa-solid fa-mars-stroke-up"></i> Status : </div>
-            <div class="value">{{g.user_status}}</div>
-        </div>
-    </div>
-</div>
-
-<div class="section_divider"></div>
-<div class="divided_section mid_section">
-    <div class="section_info experience_info">
-        {%for item in g.experience%}
-        <div class="game_stat">
-            <div class="label">
-                Team/ Org
-            </div>
-            <div class="value">
-                {{item.0}}
-            </div>
-        </div>
-        <div class="game_stat">
-            <div class="label">
-                Experience/ Role
-            </div>
-            <div class="value">
-                {{item.1}}
-            </div>
-        </div>
-        {%endfor%}
-    </div>
-    <div class="section_info ">
+        </div> -->
+        <div>Skillset</div>
         {%for item in additional_info%}
         {% if item.game == 'Valorant' %}
         <div class="game_stat">
@@ -87,43 +71,78 @@
         </div>
         {%endif%}
         {%endfor%}
+
+        <div class="game_stat top_game_stat">
+            <div class="label"><i class="fa-solid fa-mars-stroke-up"></i> Status : </div>
+            <div class="value">{{g.user_status}}</div>
+        </div>
+
+        <div class="section_info bottom_section">
+
+            <div class="bar_stats">
+                <div class="label"><i class="fa-brands fa-magento"></i>Roles :</div>
+
+                {%for label, value in saved_roles_rating%}
+                <div class="stat_container">
+                    <div class="bar_label">{{label}}</div>
+                    <div class="bar_holder" id='{{label}}{{"_bar"}}'>
+                        <div class="bar_display"></div>
+                        <div class="bar_value" style="display: none;">{{value}}</div>
+                    </div>
+                </div>
+                {%endfor%}
+            </div>
+            <div class="game_stat vertical">
+                <div class="label"><i class="fa-solid fa-book"></i> Note : </div>
+                <div class="value">{{g.remarks}}</div>
+            </div>
+
+            <div class="bar_stats">
+                <div class="label"><i class="fa-brands fa-magento"></i>Communication level :</div>
+                <div class="stat_container">
+
+                    <div class="bar_holder" id="communication_level_bar">
+                        <div class="bar_display"></div>
+                        <div class="bar_value" style="display: none;">{{g.communication_level}}</div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+    <div class="section_info mid_right_info">
+        <div>
+            Career
+        </div>
+        {%for item in g.experience%}
+        <div class="game_stat">
+            <div class="label">
+                Team/ Org
+            </div>
+            <div class="value">
+                {{item.0}}
+            </div>
+        </div>
+        <div class="game_stat">
+            <div class="label">
+                Experience/ Role
+            </div>
+            <div class="value">
+                {{item.1}}
+            </div>
+        </div>
+        {%endfor%}
+        <div class="section_divider"></div>
+        <div class="section_info ">
+            <div class="game_stat flexible">
+                <div class="label"><i class="fa-solid fa-business-time"></i>Achievements :</div>
+                <div class="value">{{g.achievements}}</div>
+            </div>
+        </div>
+    </div>
+
 </div>
 <div class="full_width_section">
-    <div class="section_info bottom_section">
-        <div class="game_stat flexible">
-            <div class="label"><i class="fa-solid fa-business-time"></i>Achievements :</div>
-            <div class="value">{{g.achievements}}</div>
-        </div>
-        <div class="bar_stats">
-            <div class="label"><i class="fa-brands fa-magento"></i>Roles :</div>
 
-            {%for label, value in saved_roles_rating%}
-            <div class="stat_container">
-                <div class="bar_label">{{label}}</div>
-                <div class="bar_holder" id='{{label}}{{"_bar"}}'>
-                    <div class="bar_display"></div>
-                    <div class="bar_value" style="display: none;">{{value}}</div>
-                </div>
-            </div>
-            {%endfor%}
-        </div>
-        <div class="game_stat vertical">
-            <div class="label"><i class="fa-solid fa-book"></i> Note : </div>
-            <div class="value">{{g.remarks}}</div>
-        </div>
-
-        <div class="bar_stats">
-            <div class="label"><i class="fa-brands fa-magento"></i>Communication level :</div>
-            <div class="stat_container">
-
-                <div class="bar_holder" id="communication_level_bar">
-                    <div class="bar_display"></div>
-                    <div class="bar_value" style="display: none;">{{g.communication_level}}</div>
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
 {%endfor%}
 
