--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/game_specific_stats/valorant_stats.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/game_specific_stats/valorant_stats.html
@@ -1,20 +1,20 @@
 {%for g in selected_gamer_profiles%}
-<div class="divided_section">
-    <div class=" left_top_section">
+<div class="divided_section overview-section">
+    <div class=" left_section">
         <div class="game_display_name" style="display: none;">{{g.game}}</div>
 
         {%for logo, url in game_logos.items%}
         {%if g.game == logo %}
-        <img class="game_logo" src={{url}} alt="">
+        <img class="game-logo" src={{url}} alt="">
         {%endif%}
         {%endfor%}
 
 
     </div>
-    <div class="section_info right_section">
+    <div class="section-info right_section">
         <div class="game_stat top_game_stat">
             <div class="label"><i class="fa-solid fa-user"></i>{{g.game}} User ID :</div>
-            <div class="value small_text">{{g.in_game_user_id}}</div>
+            <div class="value">{{g.in_game_user_id}}</div>
         </div>
 
         <div class="game_stat top_game_stat">
@@ -32,16 +32,17 @@
         </div>
         <div class="game_stat top_game_stat">
             <div class="label"><i class="fa-solid fa-clock"></i> Availability :</div>
-            <div class="value flexible"> {{g.time_available}}</div>
+            <div class="value"> {{g.time_available}}</div>
         </div>
 
     </div>
 </div>
 
-<div class="section_divider"></div>
-<div class="divided_section mid_section">
-    <div class="section_info mid_left_info">
-        <!-- <div class="game_stat top_game_stat">
+<!-- <div class="section_divider"></div> -->
+<br />
+<div class="divided_section mid-section">
+    <div class="section-info mid-left-info">
+        <!-- <div class="game_stat ">
             <div class="label"><i class="fa-solid fa-server"></i>Allow Matchmaking :</div>
             {%if g.looking_for_friends %}
             <div class="value"><i class="fa-solid fa-toggle-on"></i></div>
@@ -50,73 +51,86 @@
             {%endif%}
 
         </div> -->
-        <div>Skillset</div>
-        {%for item in additional_info%}
-        {% if item.game == 'Valorant' %}
-        <div class="game_stat">
-            <div class="label">
-                Preferred Agents:
-            </div>
-            <div class="value">
-                {{item.info.0}}
-            </div>
-        </div>
-        <div class="game_stat">
-            <div class="label">
-                Peak Rank:
-            </div>
-            <div class="value">
-                {{item.info.1}}
-            </div>
-        </div>
-        {%endif%}
-        {%endfor%}
-
-        <div class="game_stat top_game_stat">
-            <div class="label"><i class="fa-solid fa-mars-stroke-up"></i> Status : </div>
-            <div class="value">{{g.user_status}}</div>
-        </div>
-
-        <div class="section_info bottom_section">
-
-            <div class="bar_stats">
-                <div class="label"><i class="fa-brands fa-magento"></i>Roles :</div>
-
-                {%for label, value in saved_roles_rating%}
-                <div class="stat_container">
-                    <div class="bar_label">{{label}}</div>
-                    <div class="bar_holder" id='{{label}}{{"_bar"}}'>
-                        <div class="bar_display"></div>
-                        <div class="bar_value" style="display: none;">{{value}}</div>
-                    </div>
+        <div class="section-label">Skillset</div>
+        <br><br>
+        <div class="mid-left-section">
+            {%for item in additional_info%}
+            {% if item.game == 'Valorant' %}
+            <div class="game_stat">
+                <div class="label">
+                    <i class="fa-solid fa-user-ninja"></i> Agents:
                 </div>
-                {%endfor%}
+                <div class="value">
+                    {{item.info.0}}
+                </div>
             </div>
-            <div class="game_stat vertical">
-                <div class="label"><i class="fa-solid fa-book"></i> Note : </div>
-                <div class="value">{{g.remarks}}</div>
+            <div class="game_stat">
+                <div class="label">
+                    <i class="fa-solid fa-ranking-star"></i> Peak Rank:
+                </div>
+                <div class="value">
+                    {{item.info.1}}
+                </div>
+            </div>
+            {%endif%}
+            {%endfor%}
+
+            <div class="game_stat ">
+                <div class="label"> <i class="fa-solid fa-magnifying-glass-arrow-right"></i> Status : </div>
+                <div class="value">{{g.user_status}}</div>
             </div>
 
-            <div class="bar_stats">
-                <div class="label"><i class="fa-brands fa-magento"></i>Communication level :</div>
-                <div class="stat_container">
+            <div class="section-info bottom_section">
+                <div class="bar_stats">
+                    <div class="label"><i class="fa-solid fa-dice-d6"></i> Roles :</div>
 
-                    <div class="bar_holder" id="communication_level_bar">
-                        <div class="bar_display"></div>
-                        <div class="bar_value" style="display: none;">{{g.communication_level}}</div>
+
+                    {%for label, value in saved_roles_rating%}
+                    <div class="stat_container">
+                        <div class="bar_label">{{label}}</div>
+                        <div class="bar_holder" id='{{label}}{{"_bar"}}'>
+                            <div class="bar_display"></div>
+                            <div class="bar_value" style="display: none;">{{value}}</div>
+                        </div>
+                    </div>
+                    {%endfor%}
+                </div>
+                <div class="game_stat vertical">
+                    <div class="label"><i class="fa-solid fa-book"></i> Note : </div>
+                    <div class="value">{{g.remarks}}</div>
+                </div>
+
+                <div class="bar_stats">
+                    <div class="label"><i class="fa-solid fa-headphones-simple"></i> Communication level :</div>
+                    <div class="stat_container">
+
+                        <div class="bar_holder" id="communication_level_bar">
+                            <div class="bar_display"></div>
+                            <div class="bar_value" style="display: none;">{{g.communication_level}}</div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="section_info mid_right_info">
-        <div>
+
+
+
+
+
+
+
+
+
+    <div class="section-info mid_right_info">
+        <div class="section-label">
             Career
         </div>
+        <br><br>
         {%for item in g.experience%}
         <div class="game_stat">
             <div class="label">
-                Team/ Org
+                <i class="fa-solid fa-people-group"></i> Team/ Org
             </div>
             <div class="value">
                 {{item.0}}
@@ -124,17 +138,21 @@
         </div>
         <div class="game_stat">
             <div class="label">
-                Experience/ Role
+                <i class="fa-solid fa-briefcase"></i> Experience/ Role
             </div>
             <div class="value">
                 {{item.1}}
             </div>
         </div>
+        <br><br>
         {%endfor%}
-        <div class="section_divider"></div>
-        <div class="section_info ">
+        <br><br>
+        <div class="section-info ">
+            <div class="section-label">
+                <div class="label"><i class="fa-solid fa-medal"></i>Achievements :</div>
+            </div>
+            <br>
             <div class="game_stat flexible">
-                <div class="label"><i class="fa-solid fa-business-time"></i>Achievements :</div>
                 <div class="value">{{g.achievements}}</div>
             </div>
         </div>
