--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/sidebar_style.css
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/sidebar_style.css
@@ -392,7 +392,7 @@
     padding: 5px;
 }
 
-.communities-section-sidebar button {
+.button-2 {
     background-color: var(--primary_color);
     width: 300px;
     border-radius: 50px;
@@ -421,7 +421,7 @@
 }
 
 
-.community-item-sidebar button {
+/* .community-item-sidebar button {
     background-color: var(--primary_color);
     width: 80px;
     border-radius: 50px;
@@ -430,7 +430,7 @@
     margin-top: 8px;
 
 
-}
+} */
 
 .community-name-sidebar {
     /* display: none; */
