--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/utilities/button_style.css
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/utilities/button_style.css
@@ -1,3 +1,24 @@
+.button-1 {
+    background-color: var(--primary_color);
+    /* background-color: aqua; */
+    width: 80px;
+    border-radius: 50px;
+    padding: 7px;
+    font-size: small;
+    margin-bottom: 10px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.button-2 {
+    background-color: var(--primary_color);
+    width: 300px;
+    border-radius: 50px;
+    padding: 7px;
+    font-size: small;
+    margin-bottom: 10px;
+}
+
 .add-post-button {
     /* background-color: var(--tertiary1_bg_color);
     padding: 7px;
