--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/user/user_profile_info_holder.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/user/user_profile_info_holder.html
@@ -18,7 +18,26 @@
                     <h5><b>{{ profile.user.username }}</b></h5>
                 </div>
                 <div>
-                    <button class="profile-interct-button follow_btn">Follow</button>
+                    <!-- <button class="profile-interct-button follow_btn">Follow</button> -->
+                    <button class="profile-interct-button button-1">Follow</button>
+                </div>
+                <br />
+                <div>
+                    <!-- <button class="vouch-user-button button-3" value="{{profile.user.id}}">
+                        {% if vouched_for_user %}
+                        Vouched <i class='fa-solid fa-check'></i>
+                        {% else %}
+                        Vouch
+                        {% endif %}
+                    </button> -->
+
+                    {% if vouched_for_user %}
+                    <button class="vouch-user-button button-4" value="{{profile.user.id}}">Vouched <i
+                            class='fa-solid fa-check'></i></button>
+
+                    {% else %}
+                    <button class="vouch-user-button button-3" value="{{profile.user.id}}">Vouch </button>
+                    {% endif %}
                 </div>
             </div>
             <div class="profile-info-menu-right">
@@ -30,6 +49,10 @@
                 <div class="info">
                     <div class="number">{{profile.following.count}}</div>
                     <div class="label">Following</div>
+                </div>
+                <div class="info">
+                    <div class="number vouch-count">{{vouch_count}}</div>
+                    <div class="label">Vouched</div>
                 </div>
 
             </div>
@@ -72,5 +95,55 @@
                 }
             })
         })
+    })
+</script>
+
+
+
+<script>
+    function updateVouchButtonText(btn, no_of_vouches, vouched_for_user) {
+        if (vouched_for_user) {
+            elem1 = "<i class='fa-solid fa-check'></i>"
+            elem = "Vouched <i class='fa-solid fa-check'></i>"
+            btn[0].className = "vouch-user-button button-4"
+        }
+        else {
+
+            elem = "Vouch"
+            btn[0].className = "vouch-user-button button-3"
+        }
+        vouch_count_text = document.getElementsByClassName("vouch-count")[0]
+        console.log("Vouch ccount" + vouch_count_text)
+        btn[0].innerHTML = elem
+
+        vouch_count_text.innerHTML = no_of_vouches
+        console.log(btn[0].innerHTML)
+    }
+
+
+    $(document).on('click', '.vouch-user-button', function (e) {
+        e.preventDefault();
+
+        var this_ = $(this)
+        userid = this_.attr("value").valueOf()
+        console.log("Trying to vouch")
+        // var somevar = this_.attr()
+        $.ajax({
+            type: 'POST',
+            url: '{% url "vouch-user" %}',
+            data: {
+                userid: userid,
+                action: 'post',
+            },
+            success: function (json) {
+                no_of_vouches = json['result'];
+                vouched_for_user = json['vouched_for_user'];
+                console.log(json)
+                updateVouchButtonText(this_, no_of_vouches, vouched_for_user)
+            },
+            error: function (xhr, errmsg, err) {
+
+            }
+        });
     })
 </script>
