--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/utilities/button_style.css
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/utilities/button_style.css
@@ -19,6 +19,36 @@
     margin-bottom: 10px;
 }
 
+.button-3 {
+    background-color: var(--primary_color);
+    /* background-color: aqua; */
+    /* background-color: aqua; */
+
+    width: 80px;
+
+    border-radius: 50px;
+    padding: 7px;
+    font-size: small;
+    margin-bottom: 10px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.button-4 {
+    background-color: var(--primary_color);
+    /* background-color: aqua; */
+    /* background-color: aqua; */
+
+    width: 100px;
+
+    border-radius: 50px;
+    padding: 7px;
+    font-size: small;
+    margin-bottom: 10px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
 .add-post-button {
     /* background-color: var(--tertiary1_bg_color);
     padding: 7px;
@@ -127,7 +157,7 @@ button {
     border-radius: 25px;
     padding: 5px 15px;
     position: relative;
-    top: -5px;
+    /* top: -5px; */
     /* margin: 5px !important; */
     /* padding: 5px !important; */
 }
