--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/postElement/post_element_home_timeline.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/postElement/post_element_home_timeline.html
@@ -16,12 +16,12 @@
             {{post.reply_count}}<i class="fa-solid fa-comment"></i></a>
 
         {% if post.is_lft_lfp_post %}
-        <button id="vouch-button" class="vouch-button" name="{{ post.vouch_count }}"
+        <!-- <button id="vouch-button" class="vouch-button" name="{{ post.vouch_count }}"
             value="{{ post.id }}">{{post.vouch_count}}Vouch
-        </button>
-        <div>
-            View Likes
-        </div>
+        </button> -->
+
+        <button class="vouch-user-button" value="{{post.author.profile.user.id}}">
+            {{post.author.profile.vouched_by.count}} <i class="fa-solid fa-award"></i></button>
         {% endif %}
 
         {% endif %}
